[package]
name = "rustmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
tokio = {version = "1", features = ["full"]}
futures = "0.3"
smoltcp = "0.8.1"
socket2 = "0.4.7"
rawsock = "0.3.0"